[gd_scene load_steps=13 format=3 uid="uid://ctoi4c1j3c0ba"]

[ext_resource type="Material" uid="uid://claltjg8fkp3t" path="res://Core/Art/Materials/GrassPlane_Mat.tres" id="1_b3e80"]
[ext_resource type="Script" path="res://Core/grass_patch.gd" id="1_r3gwb"]
[ext_resource type="MultiMesh" uid="uid://d4h58011aixuq" path="res://Core/Art/Meshes/grass_straight_heavy_multimesh.tres" id="3_18qme"]
[ext_resource type="MultiMesh" uid="uid://dfa7t2pw7s8cq" path="res://Core/Art/Meshes/grass_curve_heavy_multimesh.tres" id="4_xexh8"]
[ext_resource type="MultiMesh" uid="uid://ddwo5ckibib86" path="res://Core/Art/Meshes/grass_left_heavy_multimesh.tres" id="5_jxcmy"]
[ext_resource type="MultiMesh" uid="uid://7p6ppx2uek7" path="res://Core/Art/Meshes/grass_right_heavy_multimesh.tres" id="6_lnjxa"]
[ext_resource type="MultiMesh" uid="uid://cwqowght1m5b8" path="res://Core/Art/Meshes/grass_straight_light_multimesh.tres" id="7_ygs54"]
[ext_resource type="MultiMesh" uid="uid://bxv30v5wm7ult" path="res://Core/Art/Meshes/grass_curve_light_multimesh.tres" id="8_ltprs"]
[ext_resource type="MultiMesh" uid="uid://qsigpv7io51a" path="res://Core/Art/Meshes/grass_left_light_multimesh.tres" id="9_bbomw"]
[ext_resource type="MultiMesh" uid="uid://bvj1lum5yip5r" path="res://Core/Art/Meshes/grass_right_light_multimesh.tres" id="10_svi8p"]

[sub_resource type="PlaneMesh" id="PlaneMesh_lpjs1"]
lightmap_size_hint = Vector2i(302, 302)
material = ExtResource("1_b3e80")
add_uv2 = true
size = Vector2(60, 60)

[sub_resource type="PlaneMesh" id="PlaneMesh_e0f54"]
lightmap_size_hint = Vector2i(102, 302)
material = ExtResource("1_b3e80")
add_uv2 = true
size = Vector2(20, 60)

[node name="Grass_Patch" type="Node3D" groups=["Grass_Patch"]]
script = ExtResource("1_r3gwb")

[node name="Camera3D" type="Camera3D" parent="."]

[node name="Plane" type="MeshInstance3D" parent="."]
mesh = SubResource("PlaneMesh_lpjs1")

[node name="Plane2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 60, 0, 0)
mesh = SubResource("PlaneMesh_lpjs1")

[node name="Plane3" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -60, 0, 0)
mesh = SubResource("PlaneMesh_lpjs1")

[node name="ThirdPlane" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 0, 0)
visible = false
mesh = SubResource("PlaneMesh_e0f54")

[node name="HeavyFoliage" type="Node3D" parent="."]

[node name="GrassMulti_Straight" type="MultiMeshInstance3D" parent="HeavyFoliage"]
multimesh = ExtResource("3_18qme")

[node name="GrassMulti_Curve" type="MultiMeshInstance3D" parent="HeavyFoliage"]
multimesh = ExtResource("4_xexh8")

[node name="GrassMulti_L" type="MultiMeshInstance3D" parent="HeavyFoliage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.352709, 0, 0)
multimesh = ExtResource("5_jxcmy")

[node name="GrassMulti_R" type="MultiMeshInstance3D" parent="HeavyFoliage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -41.9128, 0, 0)
multimesh = ExtResource("6_lnjxa")

[node name="LightFoliage" type="Node3D" parent="."]
visible = false

[node name="GrassMulti_Straight" type="MultiMeshInstance3D" parent="LightFoliage"]
multimesh = ExtResource("7_ygs54")

[node name="GrassMulti_Curve" type="MultiMeshInstance3D" parent="LightFoliage"]
multimesh = ExtResource("8_ltprs")

[node name="GrassMulti_L" type="MultiMeshInstance3D" parent="LightFoliage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.352709, 0, 0)
multimesh = ExtResource("9_bbomw")

[node name="GrassMulti_R" type="MultiMeshInstance3D" parent="LightFoliage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -41.9128, 0, 0)
multimesh = ExtResource("10_svi8p")
